<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sport">

    <fragment
        android:id="@+id/navigation_sport"
        android:name="com.example.workmeout.ui.sport.SportFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.workmeout.ui.me.MeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/navigation_talk"
        android:name="com.example.workmeout.ui.talk.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_talk" />
</navigation>
