<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".ui.identification.RecoverPasswordActivity" >

    <EditText
        android:id="@+id/edttxt_mail_recover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/emailAdress_stg"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btn_send"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/space5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/mailForgotMessage"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/space6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/space5"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space5"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space6"
        android:layout_width="20dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_send"
        style="@style/buttonDefault"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:onClick="sendMessage"
        android:text="@string/sendBtn_stg"
        android:textColor="@color/btnText"
        app:layout_constraintEnd_toStartOf="@+id/space6"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>