<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".Login_Activity">

    <Space
        android:id="@+id/space3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FF0000"
        app:layout_constraintBottom_toTopOf="@+id/space3"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toBottomOf="@+id/space4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#007E917B"
            android:orientation="vertical">

            <Space
                android:layout_width="10dp"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/loginIcon_stg_dsc"
                app:srcCompat="@drawable/ic_fitness_center_black_24dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="351dp">

                <LinearLayout
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:background="#004E007E"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/edtBG"
                        android:ems="10"
                        android:hint="@string/login_stg"
                        android:inputType="textPersonName"
                        android:textSize="24sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="#00FFFFFF" />

                    <EditText
                        android:id="@+id/editText7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/edtBG"
                        android:ems="10"
                        android:hint="@string/password_stg"
                        android:inputType="textPassword"
                        android:textSize="24sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="#00FFFFFF" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBox4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/remember_stg" />

                        <Button
                            android:id="@+id/button11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00FFFFFF"
                            android:text="@string/forgotPassword_stg"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/btnBG"
                            android:fadeScrollbars="true"
                            android:onClick="loginBtn"
                            android:text="@string/loginBtn_stg"
                            android:textColor="@color/btnText"
                            android:textSize="24sp" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="24dp"
                            android:layout_weight="0"
                            android:background="#00FFFFFF" />

                        <Button
                            android:id="@+id/button12"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/btnBG"
                            android:onClick="registerBtn"
                            android:text="@string/registerBtn_stg"
                            android:textColor="@color/btnText"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <Space
        android:id="@+id/space4"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="#A2C393"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>